zno-macro-draft/tests/zno/ui/err/006-has-too-many-arguments.rs
use zno::zno;

#[zno(a=true, b=true, c=true, d=true)]
fn f() {}

fn main() {}
